--- a/jianhuang/css/common.css
+++ b/jianhuang/css/common.css
@@ -53,22 +53,22 @@ div {
 	margin: 50px;
 }
 
-div#scan{
-	height: 450px;
-	width: 300px;
+.scan{
+	height: 310px;
+	width: 80px;
 	position: absolute;
-	left: 0px;
-	top: 10px;	
+	left: 30px;
+	top: -50px;	
 }
 
 .scan_red {
-	/*
-	height: 450px;
-	width: 300px;
+	
+	height: 300px;
+	width: 80px;
 	position: absolute;
-	left: 0px;
-	top: 0px;
-	*/
+	left: 30px;
+	top: -50px;
+	
 	background: -webkit-linear-gradient(left, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
 	/* Safari 5.1 - 6.0 */
 	background: -o-linear-gradient(right, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
@@ -87,5 +87,16 @@ div#scan{
 	background: -moz-linear-gradient(right, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
 	/* Firefox 3.6 - 15 */
 	background: linear-gradient(to right, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
+	/* 标准的语法 */
+}
+
+.scan_green {
+	background: -webkit-linear-gradient(left, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	/* Safari 5.1 - 6.0 */
+	background: -o-linear-gradient(right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	/* Opera 11.1 - 12.0 */
+	background: -moz-linear-gradient(right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	/* Firefox 3.6 - 15 */
+	background: linear-gradient(to right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
 	/* 标准的语法 */
 }
