--- a/jianhuang/css/common.css
+++ b/jianhuang/css/common.css
@@ -54,49 +54,49 @@ div {
 }
 
 .scan{
-	height: 310px;
-	width: 80px;
+	height: 80px;
+	width: 304.8px;
 	position: absolute;
-	left: 30px;
+	left: 40px;
 	top: -50px;	
 }
 
 .scan_red {
 	
-	height: 300px;
-	width: 80px;
+	height: 80px;
+	width: 304.8px;
 	position: absolute;
-	left: 30px;
+	left: 40px;
 	top: -50px;
 	
-	background: -webkit-linear-gradient(left, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
+	background: -webkit-linear-gradient(top, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
 	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
+	background: -o-linear-gradient(bottom, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
 	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
+	background: -moz-linear-gradient(bottom, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
 	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
+	background: linear-gradient(to bottom, rgba(200, 0, 0, 0), rgba(200, 0, 0, 0.3));
 	/* 标准的语法 */
 }
 
 .scan_yellow {
-	background: -webkit-linear-gradient(left, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
+	background: -webkit-linear-gradient(top, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
 	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
+	background: -o-linear-gradient(bottom, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
 	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
+	background: -moz-linear-gradient(bottom, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
 	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
+	background: linear-gradient(to bottom, rgba(200, 200, 0, 0), rgba(200, 200, 0, 0.3));
 	/* 标准的语法 */
 }
 
 .scan_green {
-	background: -webkit-linear-gradient(left, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	background: -webkit-linear-gradient(top, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
 	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	background: -o-linear-gradient(bottom, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
 	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	background: -moz-linear-gradient(bottom, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
 	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
+	background: linear-gradient(to bottom, rgba(200, 200, 0, 0), rgba(0, 255, 0, 0.3));
 	/* 标准的语法 */
 }
