--- a/jQuery/css/button.css
+++ b/jQuery/css/button.css
@@ -1,4 +1,4 @@
-button {
+.norm_button {
   margin: 10px;
   display: inline-block;
   padding: 15px 25px;
@@ -14,10 +14,10 @@ button {
   box-shadow: 0 9px #999;
 }
 
-button:hover {background-color: #3e8e41}
+.norm_button:hover {background-color: #3e8e41}
 
-button:active {
-  background-color: #3e8e41;
+.norm_button:active {
+  background-color: #CCFFFF;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
@@ -29,4 +29,9 @@ button:active {
 .orange:hover{
     background-color: yellow;
     color:black;
+}
+
+.disabled{
+  background-color: gainsboro;
+  color: gray;
 }
