--- a/product/wangpan/css/app.css
+++ b/product/wangpan/css/app.css
@@ -22,7 +22,7 @@
 .con-left{
   position:relative; 
   width: 200px;
-  height: 650px;
+  height: 500px;
   background:rgba(239, 244, 248, 1);
   float: left;
   display: table;
@@ -32,7 +32,7 @@
 
 .con-right{
   margin-left: 210px;
-  height: 650px;
+  height: 500px;
   /*background: #CCCCFF;*/
   background-color: white;
   text-align: center;
@@ -59,11 +59,17 @@
 /*left*/
 .con-left a{
     color: #000;
-    padding: 8px 20px 8px 50px;
+    padding: 20px 20px 8px 50px;
     font-size: 1.2em;
+    height: 40px;
 }
 
 .con-left a:hover {
+    background-color: #cccccc;
+    color: white;
+}
+
+.con-left a.select {
     background-color: #555;
     color: white;
 }
@@ -75,15 +81,65 @@
 }
 
 .operate a{
-    margin: 10px;
     height: 30px;
-    padding:5px 0;
     font-size: 1.2em;
+    display: block;
+    float:left;
+}
+
+/*common button*/
+.operate .operate-common{
+    padding:8px 0 2px 0;
+    margin: 10px;
     border-style: solid;
     border-width: 1.5px;
     border-radius: 4px;
-    display: block;
+}
+
+/*ul button*/
+.operate ul{
+    list-style-type: none;
+    margin-top:10px;
+    padding: 0;
     float:left;
+    border-collapse:collapse; 
+}
+
+.operate ul.hide{
+    display: none;
+}
+
+.operate li{
+    display: inline;
+}
+
+.operate ul a{
+    width:80px;
+    padding:8px 10px 2px 10px;
+    border-style: solid;
+    color: #0066CC;
+    border-color: #0066CC;
+    border-width: 1.8px;
+    border-right-width: 0;
+}
+
+.operate li:first-child a{
+    border-radius: 4px 0 0  4px;
+}
+
+.operate li:last-child a{
+    border-radius: 0 4px 4px 0;
+    border-right-width: 1.8px;
+}
+
+.operate ul a:hover{
+    opacity: 0.7;
+}
+
+.operate ul a.disabled{
+    pointer-events:none;
+    opacity: 0.5;
+    color: grey;
 }
 
 #uploadFile{
@@ -123,7 +179,7 @@
 /*table*/
 .file-list{
     width: 100%;
-    height: 700px;
+    height: 400px;
     overflow:auto;
 }
 
@@ -147,4 +203,32 @@
 #file-list-table tr, #file-list-table td{
     padding:18px 0;
     border-bottom: 1px #cccccc solid;
+}
+
+.rename{
+    display: inline;
+}
+
+.rename button{
+    background-color: white;
+    border: 2px solid #0099CC;
+    border-radius: 2px;
+    text-align: center;
+    text-decoration: none;
+    padding:2px;
+    width:30px;
+    height:30px;
+    cursor: pointer;
+}
+
+.rename input{
+    background-color: white;
+    border: 2px solid #0099CC;
+    border-radius: 2px;
+    text-align: left;
+    text-decoration: none;
+    padding:1px 1px 1px 13px;
+    height:25px;
+    width:250px;
+    font-size:1em;
 }
