--- a/product/wangpan/css/main.css
+++ b/product/wangpan/css/main.css
@@ -78,3 +78,11 @@ button.disabled {
     opacity: 0.6;
     cursor: not-allowed;
 }*/
+
+/*common*/
+/*边框*/
+.border_grey_solid{
+    border-style: solid;
+    border-width: 1.2px;
+    border-color:#eaeaea;
+}
