--- a/product/wangpan/css/app.css
+++ b/product/wangpan/css/app.css
@@ -4,9 +4,6 @@
     background-color: #CCCCCC;
 }*/
 
-
-
-
 .top {
     width: 100%;
     height: 78px;
@@ -45,7 +42,7 @@
 .disk-size {
     height: 120px;
     /*background-color: #99CCCC;*/
-    margin-top:100px
+    margin-top: 100px
 }
 
 /*element father*/
@@ -88,8 +85,9 @@
     margin: 10px 0 0 0;
     border-radius: 10px;
     box-shadow: 0px 4px 9px #888888;
-        transition: width 2s;
-    -webkit-transition: width 2s; /* Safari */
+    transition: width 2s;
+    -webkit-transition: width 2s;
+    /* Safari */
 }
 
 .top .user_info_detail::after {
@@ -97,7 +95,7 @@
     position: absolute;
     top: 100%;
     /* 提示工具底部 */
-    left:1245px;
+    left: 1245px;
     margin-top: -7px;
     border-width: 12px;
     border-style: solid;
@@ -158,6 +156,7 @@
 }
 
 /* 废弃。鼠标移出去，就没了！！改用js*/
+
 /*#head_img:hover ~ #user_info_detail{
     display: block;
 }*/
@@ -199,7 +198,8 @@
     height: 50px;
 }
 
-.operate a,.file-list a {
+.operate a,
+.file-list a {
     height: 30px;
     font-size: 1.2em;
     display: block;
@@ -277,18 +277,20 @@
     background-color: #333399;
 }
 
-#newFolder,#doRecycle {
+#newFolder,
+#doRecycle {
     width: 150px;
     color: #0066CC;
     border-color: #0066CC;
     border-width: 1.8px;
 }
 
-#doRecycle{
-    width:80px;
+#doRecycle {
+    width: 80px;
 }
 
-#newFolder:hover,#doRecycle:hover {
+#newFolder:hover,
+#doRecycle:hover {
     border-color: #0099CC;
     color: #0099CC;
 }
@@ -301,12 +303,31 @@
     /*text-align: left;*/
 }
 
+.item-title .tab_info {
+    display: block;
+    text-align: left;
+    margin-top: 5px;
+    margin-bottom: 3px;
+}
 
-.item-title .tab_info{
-    display:block;
-    text-align:left;
-    margin-top:5px;
-    margin-bottom:3px;
+.item-title .dir_go_back {
+    margin-top: 5px;
+    margin-bottom: 3px;
+    height: 21.33px;
+    float:left;
+    display: block;
+    color: #4287ed;
+}
+
+.item-title .EKIHPEb{
+    margin: 5px 3px 3px 3px;  
+    color: #c5d8f3; 
+    /*float:left;*/
+}
+.item-title .KLxwHFb{
+    margin: 5px 5px 3px 5px;  
+    color: #c5d8f3; 
+    float:left;
 }
 /*table*/
 
@@ -366,4 +387,3 @@
     width: 250px;
     font-size: 1em;
 }
-
