--- a/product/quick-start/css/main.css
+++ b/product/quick-start/css/main.css
@@ -7,9 +7,10 @@ html,
 body {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
 }
 
+/*手机尺寸*/
 .main-panel {
     /*border: 4px solid #BDBDBD;
     border-radius: 2px;*/
@@ -42,7 +43,82 @@ body {
 .app-title {
     line-height: 50px;
 }
+/*手机尺寸end*/
 
+/*禁用a标签按钮的类*/
+a.disabled {
+    pointer-events: none;
+}
+
+/*block a标签*/
+.a_block {
+    display: block;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*ul标签*/
+ul.hide {
+    display: none;
+}
+
+.ul_common {
+    list-style-type: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-collapse: collapse;
+}
+
+/*水平ul按钮导航栏 */
+.ul_inline li {
+    display: inline;
+}
+
+.ul_inline .a_block {
+    border-style: solid;
+    border-right-width: 0;
+    border-width: 1.8px;
+    border-right-width: 0;
+}
+
+.ul_inline li:first-child a {
+    border-radius: 4px 0 0 4px;
+}
+
+.ul_inline li:last-child a {
+    border-radius: 0 4px 4px 0;
+    border-right-width: 1.8px;
+}
+
+.ul_inline ul a:hover {
+    opacity: 0.7;
+}
+
+.ul_inline ul a.disabled {
+    opacity: 0.5;
+    color: grey;
+}
+
+/*input */
+.bea_input {
+    background-color: white;
+    border: 2px solid #0099CC;
+    border-radius: 2px;
+    text-align: left;
+    text-decoration: none;
+}
+
+/*common*/
+/*边框*/
+/*灰色边框*/
+.border_grey_solid {
+    border-style: solid;
+    border-width: 1.2px;
+    border-color: #eaeaea;
+}
+
+/*
 button {
     background-color: white;
     border: 2px solid #4CAF50;
@@ -55,7 +131,7 @@ button {
     font-size: 16px;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s;
-    /* Safari */
+    
     transition-duration: 0.4s;
     cursor: pointer;
 }
@@ -73,4 +149,4 @@ button:active {
 button.disabled {
     opacity: 0.6;
     cursor: not-allowed;
-}
+}*/
