--- a/product/wsnIndoorBack/css/back1_main.css
+++ b/product/wsnIndoorBack/css/back1_main.css
@@ -3,8 +3,8 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-size: 16px;
-    font-family: 微软雅黑;
+    /*font-size: 16px;
+    font-family: 微软雅黑;*/
 }
 
 html,
@@ -307,3 +307,33 @@ header p,
 
 .table-head{
 }
+
+#tab_item_operate a{
+    float:left;
+    margin-right:6px;
+}
+
+.tab_small_opt_button{
+    color:#000;
+    float: left;
+    margin-right:6px; 
+}
+.tab_num{
+    color: #888888;
+}
+
+.data-loading::after {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    animation: ellipsis 1s infinite;
+    content: "\2026\2026"; /* ascii code for the ellipsis character */
+}
+@keyframes ellipsis {
+    from {
+        width: 2px;
+    }
+    to {
+        width: 25px;
+    }
+}     
