--- a/product/wsnIndoorBack/css/back1_main.css
+++ b/product/wsnIndoorBack/css/back1_main.css
@@ -16,11 +16,6 @@ body,
     background: #efe9e9;
 }
 
-a {
-    display: block;
-    text-decoration: none;
-}
-
 .mainbox header {
     position: absolute;
     top: 0;
@@ -93,8 +88,8 @@ header p,
     float: left;
     height: 60px;
     margin: 10px 10px;
-    font-size:1.5em;
-    margin-left:50px;
+    font-size: 1.5em;
+    margin-left: 50px;
 }
 
 .top .user_info {
@@ -119,7 +114,7 @@ header p,
     background-color: white;
     width: 300px;
     height: 260px;
-    margin: 25px 0 0 0;
+    margin: 30px 0 0 0;
     border-radius: 10px;
     box-shadow: 0px 4px 9px #888888;
     transition: width 2s;
@@ -128,7 +123,7 @@ header p,
 }
 
 .top .user_info .nickname {
-    /*line-height: 10px;*/
+    line-height: 44px;
     color: #fff;
 }
 
@@ -148,7 +143,7 @@ header p,
 .top .user_info_detail_head {
     border-radius: 10px 10px 0 0;
     width: 300px;
-    height: 100px;
+    height: 80px;
     margin: 0;
     padding: 0;
     background-color: rgba(62, 139, 229, 1);
@@ -235,8 +230,18 @@ header p,
     color: #000;
     padding: 20px 20px 8px 50px;
     font-size: 1.2em;
-    font-weight: 1.2em;
+    height: 70px;
+    display: block;
+    text-decoration: none;
+}
+
+.left-nav-self {
+    /*color: #000;
+    padding: 20px 20px 8px 50px;
+    font-size: 1.2em;
     height: 40px;
+    display: block;
+    text-decoration: none;*/
 }
 
 .con-left a:hover {
@@ -250,38 +255,52 @@ header p,
 }
 
 /*内容*/
-.content-main{
+
+.content-main {
     position: relative;
     height: 100%;
-    padding:0 32px 64px;
+    padding: 0 32px 64px;
     overflow: auto;
 }
 
-.content-bar{
-    height: 100px;
-    padding:30px 0 30px 24px;
+.content-bar {
+    position: relative;
+    height: 80px;
+    padding: 15px 0 15px 24px;
     box-sizing: border-box;
 }
 
-.content-bar-left{
+.content-bar-left {
     float: left;
-    height: 40px;
-}
-.content-bar-title{
-    display: inline-block;
-    line-height: 40px;
-    font-size:1.3em;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.3em;
 }
 
-.content-bar-result-count{
+.content-bar-right {
+    float: right;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.3em;
+}
+
+.content-bar-breadcrumb {
     display: inline-block;
-    line-height: 40px;
+}
+
+.breadcrumbback {
+    cursor: pointer;
+    color: rgba(62, 139, 229, 1);
+}
+
+.content-bar-result-count {
+    display: inline-block;
     color: #999;
-    padding-left:3px; 
-    font-size:1.3em;
+    padding-left: 3px;
 }
 
 /*表格*/
+
 #list_table {
     text-align: left;
     padding-left: 20px;
@@ -289,7 +308,6 @@ header p,
     width: 100%;
     border-collapse: collapse;
 }
-
 
 #list_table th {
     padding: 10px 0px;
@@ -301,34 +319,38 @@ header p,
     border-bottom: 1px #cccccc solid;
 }
 
-.table-title{
+.table-title {
     color: grey;
 }
 
-.table-head{
-}
+.table-head {}
 
-#tab_item_operate a{
-    float:left;
-    margin-right:6px;
-}
-
-.tab_small_opt_button{
-    color:#000;
+#tab_item_operate a {
     float: left;
-    margin-right:6px; 
+    margin-right: 6px;
 }
-.tab_num{
+
+.tab_small_opt_button {
+    color: #000;
+    float: left;
+    margin-right: 6px;
+}
+
+.tab_num {
     color: #888888;
 }
+
+/*表格数据加载*/
 
 .data-loading::after {
     overflow: hidden;
     display: inline-block;
     vertical-align: bottom;
     animation: ellipsis 1s infinite;
-    content: "\2026\2026"; /* ascii code for the ellipsis character */
+    content: "\2026\2026";
+    /* ascii code for the ellipsis character */
 }
+
 @keyframes ellipsis {
     from {
         width: 2px;
@@ -336,4 +358,103 @@ header p,
     to {
         width: 25px;
     }
-}     
+}
+
+/*内容*/
+
+/*内容外围*/
+
+.content-mapapp {
+    position: relative;
+    width: 100%;
+    height: 680px;
+    /*background-color: papayawhip;*/
+}
+
+.content-mapComponent {
+    position: relative;
+    float: left;
+    width: 60%;
+    height: 100%;
+    /*background-color: palegreen;*/
+}
+
+.content-mapinfo {
+    position: relative;
+    float: left;
+    width: 40%;
+    height: 100%;
+    background-color: #fff;
+    box-shadow:0 2px 3px 0 rgba(0,0,0,.2);
+    padding:10px 25px;
+    /*background-color: rebeccapurple;*/
+}
+
+.map-all {
+    position: relative;
+    float: top;
+    width: 100%;
+    height: 90%;
+    /*background-color: papayawhip;*/
+}
+
+.map-footer {
+    position: relative;
+    margin-top:10px;
+    /*float: bottom;*/
+    width: 95%;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-size: 1.2em;
+    /*box-shadow:0 2px 3px 0 rgba(0,0,0,.2);
+    padding:10px 25px;*/
+    /*background-color: #fff;*/
+}
+
+.map-tool {
+    position: relative;
+    float: left;
+    width: 13%;
+    height: 100%;
+    box-shadow:0 2px 3px 0 rgba(0,0,0,.2);
+    padding:10px 25px;
+    /*background-color: greenyellow;*/
+}
+
+.map-entity {
+    position: relative;
+    float: left;
+     width: 80%;
+    height: 100%;
+    /*background-color: orchid;*/
+}
+
+.map-floor {
+    position: relative;
+    float: left;
+    width: 5%;
+    height: 100%;
+    /*background-color: crimson;*/
+}
+
+/*.map-floor-btnroup {
+    position: relative;
+    width: 80%;
+    display: inline-block;
+    margin: 0 auto;
+    background-color: grey;
+}*/
+
+.map-floor-btnroup {
+    position: relative;
+    margin: 0 auto;
+}
+
+.indoormap {
+    width: 99%;
+    height: 99%;
+    margin: 0 auto;
+    /*background-color: grey;*/
+    border-style: groove;
+    border-color: green;
+}
