--- a/product/wsnIndoorBack/css/back1_main.css
+++ b/product/wsnIndoorBack/css/back1_main.css
@@ -276,6 +276,7 @@ header p,
 }
 
 /*内容*/
+
 .content-main {
     position: relative;
     height: 100%;
@@ -407,8 +408,8 @@ header p,
 .list_bottom_tabinfo {
     display: inline-block;
     height: 50px;
-    padding-left:20px;
-    font-size:16px;
+    padding-left: 20px;
+    font-size: 16px;
     position: relative;
     line-height: 50px;
 }
@@ -461,7 +462,7 @@ header p,
     float: left;
     width: 55%;
     height: 100%;
-    margin-left:10px;
+    margin-left: 10px;
     /*background-color: palegreen;*/
 }
 
@@ -543,6 +544,39 @@ header p,
     /*background-color: grey;*/
     border-style: groove;
     border-color: green;
+}
+
+#viewOperate {
+    bottom: 20px;
+    left: 20px;
+    position: absolute;
+    z-index: 200;
+}
+
+#viewOperate button {
+    display: block;
+    float: left;
+    margin: 1px;
+    padding: 0;
+    color: #fff;
+    font-size: 1.14em;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    height: 1.575em;
+    width: 1.575em;
+    line-height: .4em;
+    background-color: rgba(0, 60, 136, .5);
+    border: none;
+}
+
+#mouse-position{
+    float:right;
+    font-size:10pm;
+}
+
+.sensor-table-operate{
+    color: black;
 }
 
 /*百度地图*/
