--- a/product/wsnIndoorBack/css/back/monitor_sensor.css
+++ b/product/wsnIndoorBack/css/back/monitor_sensor.css
@@ -96,8 +96,25 @@
 }
 
 .sensor-loc-button {
-    padding: 0 22px;
-    margin: auto 0;
+    padding: 0 0px;
+    width: 25px;
+    margin: 0 5px;
+    float: left;
+}
+
+.sensor-is-position {
+    width: 22px;
+    height: 22px;
+    margin: 0 5px;
+    float: left;
+}
+
+.sensor-is-position-true {
+    background-image: url('../../fonts/iconfont/yes22.png');
+}
+
+.sensor-is-position-false {
+    background-image: url('../../fonts/iconfont/no22.png');
 }
 
 .danger_alert {
