--- a/product/wsnIndoorBack/css/back/monitor_sensor.css
+++ b/product/wsnIndoorBack/css/back/monitor_sensor.css
@@ -72,6 +72,12 @@
     /*background-color: orange;*/
 }
 
+.sensor-info-table-row {}
+
+.sensor-info-table-row.select {
+    background-color: #F5F7F7;
+}
+
 /*.sensor-info-table-page {
     position: relative;
     padding: 10px 10px 10px 10px;
@@ -93,6 +99,23 @@
 .sensor-info-pagination {
     position: relative;
     float: right;
+}
+
+.sensor-status {
+    width: 22px;
+    height: 22px;
+}
+
+.sensor-status.closed {
+    background-image: url('../../fonts/iconfont/sensor22_close.png');
+}
+
+.sensor-status.opened {
+    background-image: url('../../fonts/iconfont/sensor22_open.png');
+}
+
+.sensor-status.breaked {
+    background-image: url('../../fonts/iconfont/sensor22_break.png');
 }
 
 .sensor-loc-button {
@@ -158,7 +181,7 @@
     border: 1px solid #cccccc;
     bottom: 12px;
     left: -50px;
-    min-width: 380px;
+    min-width: 450px;
 }
 
 .ol-popup:after,
